--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!-- Write your HTML in this file -->
+<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <title>My Site Title</title>
+
+</head>
+    <body>
+<h1>Hello, World!</h1> 
+    </body>
+    </html>
